@@ -1344,7 +1344,7 @@ class ColorizerPropertyPage : GlobalPropertyPage
 		mSemantics.setChecked(opts.projectSemantics);
 		mUserTypes.setText(opts.UserTypesSpec);
 
-		mSemantics.setEnabled(false);
+		//mSemantics.setEnabled(false);
 	}
 
 	override int DoApply(GlobalOptions opts, GlobalOptions refopts)
